--- a/Source/CriticalPath.Web/Views/PurchaseOrders/Edit.cshtml
+++ b/Source/CriticalPath.Web/Views/PurchaseOrders/Edit.cshtml
@@ -52,6 +52,21 @@
         }
 
         <div class="form-group">
+            @Html.LabelFor(model => model.RefCode, htmlAttributes: new { @class = "control-label col-lg-2 col-md-3 col-sm-3" })
+            <div class="col-lg-5 col-md-6 col-sm-7">
+                @Html.TextBoxFor(m => m.RefCode, new { @class = "form-control", autocomplete = "off" })
+                @Html.ValidationMessageFor(m => m.RefCode, "", new { @class = "text-danger" })
+            </div>
+        </div>
+        <div class="form-group">
+            @Html.LabelFor(model => model.KimballNr, htmlAttributes: new { @class = "control-label col-lg-2 col-md-3 col-sm-3" })
+            <div class="col-lg-5 col-md-6 col-sm-7">
+                @Html.TextBoxFor(m => m.KimballNr, new { @class = "form-control", autocomplete = "off" })
+                @Html.ValidationMessageFor(m => m.KimballNr, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+        <div class="form-group">
             <label class="control-label col-lg-2 col-md-3 col-sm-3 col-xs-3">
                 @Html.DisplayNameFor(model => model.OrderDate)
             </label>
