--- a/Source/CriticalPath.Web/Views/PurchaseOrders/_PoSizeRatios.cshtml
+++ b/Source/CriticalPath.Web/Views/PurchaseOrders/_PoSizeRatios.cshtml
@@ -4,7 +4,7 @@
 @model PurchaseOrderVM
 
 <div class="row">
-    <label class="control-label col-md-2 col-sm-3 mt10">
+    <label class="control-label col-md-2 col-sm-3 mb5">
         @Html.DisplayNameFor(model => model.SizingStandard)
     </label>
     <div class="col-sm-9 fontSize125pc mt10">
@@ -12,7 +12,7 @@
     </div>
 </div>
 <div class="row mt20">
-    <label class="control-label col-md-2 col-sm-3">
+    <label class="control-label col-md-2 col-sm-3 mb5">
         @Html.DisplayNameFor(model => model.SizeRatios)
     </label>
     <div class="col-lg-8 col-md-9 col-sm-9 fontSize125pc">
