--- a/Source/CriticalPath.Web/Views/Shared/_AllPrice.cshtml
+++ b/Source/CriticalPath.Web/Views/Shared/_AllPrice.cshtml
@@ -3,46 +3,46 @@
 @model Product
 @*    @model IAllPriceCurrency *@
 <div class="row">
-    <label class="control-label col-md-2 col-sm-3">
+    <label class="control-label col-md-2 col-sm-3 mb5">
         @Html.DisplayNameFor(model => model.UnitPrice)
     </label>
-    <div class="col-md-10 col-sm-9">
+    <div class="col-lg-8 col-md-9 col-sm-9 mt10">
         @Model.UnitPrice.ToString("0.00")
         @Html.DisplayFor(m => m.SellingCurrency)
     </div>
 </div>
 <div class="row">
-    <label class="control-label col-md-2 col-sm-3">
+    <label class="control-label col-md-2 col-sm-3 mb5">
         @Html.DisplayNameFor(model => model.LicensorPrice)
     </label>
-    <div class="col-md-10 col-sm-9">
+    <div class="col-lg-8 col-md-9 col-sm-9 mt10">
         @(Model.LicensorPrice == null ? "N/A" : Model.BuyingPrice.Value.ToString("#.00"))
         @Html.DisplayFor(m => m.LicensorCurrency)
     </div>
 </div>
 <div class="row">
-    <label class="control-label col-md-2 col-sm-3">
+    <label class="control-label col-md-2 col-sm-3 mb5">
         @Html.DisplayNameFor(model => model.BuyingPrice)
     </label>
-    <div class="col-md-10 col-sm-9">
+    <div class="col-lg-8 col-md-9 col-sm-9 mt10">
         @(Model.BuyingPrice == null ? "N/A" : Model.BuyingPrice.Value.ToString("#.00"))
         @Html.DisplayFor(m => m.BuyingCurrency)
     </div>
 </div>
 <div class="row">
-    <label class="control-label col-md-2 col-sm-3">
+    <label class="control-label col-md-2 col-sm-3 mb5">
         @Html.DisplayNameFor(model => model.RoyaltyFee)
     </label>
-    <div class="col-md-10 col-sm-9">
+    <div class="col-lg-8 col-md-9 col-sm-9 mt10">
         @(Model.RoyaltyFee == null ? "N/A" : Model.RoyaltyFee.Value.ToString("#.00"))
         @Html.DisplayFor(m => m.RoyaltyCurrency)
     </div>
 </div>
 <div class="row">
-    <label class="control-label col-md-2 col-sm-3">
+    <label class="control-label col-md-2 col-sm-3 mb5">
         @Html.DisplayNameFor(model => model.RetailPrice)
     </label>
-    <div class="col-md-10 col-sm-9">
+    <div class="col-lg-8 col-md-9 col-sm-9 mt10">
         @(Model.RetailPrice == null ? "N/A" : Model.RetailPrice.Value.ToString("#.00"))
         @Html.DisplayFor(m => m.RetailCurrency)
     </div>
