--- a/Source/CriticalPath.Web/Views/Shared/_Layout.cshtml
+++ b/Source/CriticalPath.Web/Views/Shared/_Layout.cshtml
@@ -51,6 +51,9 @@
                         <li>@Html.ActionLink(@EntityStrings.Customers, "Index", "Customers")</li>
                         <li>@Html.ActionLink(@EntityStrings.CreateCustomer, "Create", "Customers")</li>
                         <li class="divider"></li>
+                        <li>@Html.ActionLink(@EntityStrings.Licensors, "Index", "Licensors")</li>
+                        <li>@Html.ActionLink(@EntityStrings.CreateLicensor, "Create", "Licensors")</li>
+                        <li class="divider"></li>
                         <li>@Html.ActionLink(@EntityStrings.Suppliers, "Index", "Suppliers")</li>
                         <li>@Html.ActionLink(@EntityStrings.CreateSupplier, "Create", "Suppliers")</li>
                         <li class="divider"></li>
